Fix h3 spacing issue

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -39,7 +39,7 @@ header {
   }
 }
 
-@media(min-width: 800px) {
+@media(min-width: 600px) {
   header {
     height: 100vh;
     a {
