--- a/styles/portfolio.scss
+++ b/styles/portfolio.scss
@@ -86,7 +86,7 @@ $fonts: 'Roboto', sans-serif;
   article {
     margin: 0 2rem;
     .wrapper {
-      margin-left: 220px;
+      margin-left: 230px;
       padding: 0 1.5rem 0 30px;
       background-color: $ltgray;
       display: flex;
